[package]
name = "backend"
version = "0.1.0"
authors = ["ntk <43851479+ntk-ta01@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["openssl"]}
actix-cors = "0.5.4"
openssl = "0.10.33"
serde_derive = "1.0.125"
serde_qs = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
actix-http = "2.2.0"
chrono = "0.4"